visitor pattern added between AdventurePhaseData and adventure cards